test/resources/parser/failing/testStructure2.scala
object MissingExtends {
  abstract class List
  case class Nil() List
}